2020/sem1/CompSci_2201(ADSA)/Assignment_1_Student_WebSub/a1783911/revision-313/200327-233052/output
$ websubmit-automark -g 4 -n a1783911 -x a1783911 -a 2020/s1/adsa/assignment1@313 -r 313 -f /users/assessment/websubmit/2020/s1/adsa/assignment1/Web-Submission/a1783911/revision-313 -d 200327-233052 -e -u https://version-control.adelaide.edu.au/svn/ 2020/s1/adsa/assignment1
****************************************************************************************************************** 
Web Submission Script for Assignment Key: 2020/s1/adsa/assignment1  User: a1783911 SVN Exported revision 313.
******************************************************************************************************************
Submitted Files:

.:
total 8
-rw-rw---- 1 legend teaching 8163 Mar 27 23:24 main.cpp
****************************************************************************************************************** 
Output From Web Submission Script:
main.cpp: In member function ‘std::string Add::performAddition()’:
main.cpp:87:58: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
             for (int index = 0; index < sumPartials.size(); index++) {
                                                          ^
main.cpp: In member function ‘std::string Multiplication::findDiff(std::string, std::string)’:
main.cpp:155:41: error: ‘reverse’ was not declared in this scope
         reverse(str1.begin(), str1.end()); 
                                         ^
main.cpp: In member function ‘std::string Multiplication::singlebitMultiplication(char, char)’:
main.cpp:208:13: warning: unused variable ‘size’ [-Wunused-variable]
         int size = to_string(mul).length();
             ^
main.cpp: In member function ‘std::string Multiplication::multiply(std::string, std::string)’:
main.cpp:226:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         while (lhs.size() < length) {
                             ^
main.cpp:230:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         while (rhs.size() < length) {
                             ^
Traceback (most recent call last):
  File "mark.py", line 51, in <module>
    assert os.path.isfile('main.out'), 'does not compile'
AssertionError: does not compile
cat: markoutput: No such file or directory
****************************************************************************************************************** 
Web Submission Script Complete.
